--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -32,6 +32,7 @@ nav {
       }
       @media(max-width: 600px) {
         height: 35px;
+        width: 171px;
       }
 
       img {
@@ -1141,6 +1142,7 @@ nav {
       padding: 0;
       height: 45px;
       background: none;
+      color: @text-color !important;
     }
     
     .dropdown-content {
