--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -25,4 +25,4 @@
 @import 'posts/languages/markup.less';
 
 /* baquette box */
-@import 'posts/box.css';
+@import 'https://hackers.nyc3.cdn.digitaloceanspaces.com/css/baguettebox.css';
