--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -1,15 +1,15 @@
-.hljs-post-content {
+.post-content {
 
-  .hljs.hljs-css,
-  .hljs.hljs-ini,
-  .hljs.hljs-vim,
-  .hljs.hljs-yaml,
-  .hljs-language-css,
-  .hljs-language-ini,
-  .hljs-language-toml,
-  .hljs-language-vim,
-  .hljs-language-xml,
-  .hljs-language-yaml {
+  .hljs.css,
+  .hljs.ini,
+  .hljs.vim,
+  .hljs.yaml,
+  .language-css,
+  .language-ini,
+  .language-toml,
+  .language-vim,
+  .language-xml,
+  .language-yaml {
     background: #2E3440;
 
     &::before {
@@ -19,164 +19,164 @@
       }
     }
 
-    .hljs-subst {
+    .subst {
       color: #D8DEE9;
     }
 
-    .hljs-selector-tag {
+    .selector-tag {
       color: #81A1C1;
     }
 
-    .hljs-selector-id {
+    .selector-id {
       color: #8FBCBB;
       font-weight: bold;
     }
 
-    .hljs-selector-class {
+    .selector-class {
       color: #8FBCBB;
     }
 
-    .hljs-selector-attr {
+    .selector-attr {
       color: #8FBCBB;
     }
 
-    .hljs-selector-pseudo {
+    .selector-pseudo {
       color: #88C0D0;
     }
 
-    .hljs-addition {
+    .addition {
       background-color: rgba(163,190,140,0.5);
     }
 
-    .hljs-deletion {
+    .deletion {
       background-color: rgba(191,97,106,0.5);
     }
 
-    .hljs-built_in,
-    .hljs-type {
+    .built_in,
+    .type {
       color: #8FBCBB;
     }
 
-    .hljs-class {
+    .class {
       color: #8FBCBB;
     }
 
-    .hljs-function {
+    .function {
       color: #88C0D0;
     }
 
-    .hljs-function > .hljs-title {
+    .function > .title {
       color: #88C0D0;
     }
 
-    .hljs-keyword,
-    .hljs-literal,
-    .hljs-symbol {
+    .keyword,
+    .literal,
+    .symbol {
       color: #81A1C1;
     }
 
-    .hljs-number {
+    .number {
       color: #B48EAD;
     }
 
-    .hljs-regexp {
+    .regexp {
       color: #EBCB8B;
     }
 
-    .hljs-string {
+    .string {
       color: #A3BE8C;
       font-weight: 400;
       font-family: 'Hack';
     }
 
-    .hljs-title {
+    .title {
       color: #8FBCBB;
     }
 
-    .hljs-params {
+    .params {
       color: #D8DEE9;
     }
 
-    .hljs-bullet {
+    .bullet {
       color: #81A1C1;
     }
 
-    .hljs-code {
+    .code {
       color: #8FBCBB;
     }
 
-    .hljs-emphasis {
+    .emphasis {
       font-style: italic;
     }
 
-    .hljs-formula {
+    .formula {
       color: #8FBCBB;
     }
 
-    .hljs-strong {
+    .strong {
       font-weight: bold;
     }
 
-    .hljs-link:hover {
+    .link:hover {
       text-decoration: underline;
     }
 
-    .hljs-quote {
+    .quote {
       color: #4C566A;
     }
 
-    .hljs-comment {
+    .comment {
       color: #4C566A;
     }
 
-    .hljs-doctag {
+    .doctag {
       color: #8FBCBB;
     }
 
-    .hljs-meta,
-    .hljs-meta-keyword {
+    .meta,
+    .meta-keyword {
       color: #5E81AC;
     }
 
-    .hljs-meta-string {
+    .meta-string {
       color: #A3BE8C;
       font-weight: 400;
       font-family: 'Hack';
     }
 
-    .hljs-attr {
+    .attr {
       color: #8FBCBB;
     }
 
-    .hljs-attribute {
+    .attribute {
       color: #D8DEE9;
     }
 
-    .hljs-builtin-name {
+    .builtin-name {
       color: #81A1C1;
     }
 
-    .hljs-name {
+    .name {
       color: #81A1C1;
     }
 
-    .hljs-section {
+    .section {
       color: #88C0D0;
     }
 
-    .hljs-tag {
+    .tag {
       color: #81A1C1;
     }
 
-    .hljs-variable {
+    .variable {
       color: #D8DEE9;
     }
 
-    .hljs-template-variable {
+    .template-variable {
       color: #D8DEE9;
     }
 
-    .hljs-template-tag {
+    .template-tag {
       color: #5E81AC;
     }
   }
