--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -9,97 +9,104 @@
       background: #435643;
     }
 
-    .hljs-inserted {
+    .inserted {
       border-bottom: 1px dotted #f0fff0;
       text-decoration: none;
     }
 
-    .hljs-bold,
-    .hljs-important {
+    .bold,
+    .important {
       font-weight: bold;
     }
 
-    .hljs-important {
+    .important {
       color: #b3d6b3;
     }
 
-    .hljs-entity {
+    .entity {
       cursor: help;
     }
 
-    .hljs-highlight {
+    .highlight {
       outline: 0.4em solid #5c705c;
       outline-offset: 0.4em;
     }
 
-    .hljs-cdata,
-    .hljs-doctype,
-    .hljs-prolog {
+    .cdata,
+    .doctype,
+    .prolog {
       color: #535f53;
     }
 
-    .hljs-comment {
+    .comment {
       color: #7f8ba7;
       opacity: 0.6;
     }
 
-    .hljs-built_in {
+    .built_in {
       font-weight: 700;
       color: #79ddfb;
     }
 
-    .hljs-punctuation {
+    .punctuation {
       color: #535f53;
     }
 
-    .hljs-namespace {
+    .namespace {
       opacity: 0.7;
     }
 
-    .hljs-number,
-    .hljs-operator,
-    .hljs-tag {
+    .number,
+    .operator {
       color: #f7f23f;
     }
 
-    .hljs-property {
+    .tag {
+      color: #daf7fd;
+
+      .name {
+        color: #6dbfec;
+      }
+    }
+
+    .property {
       color: #687d68;
     }
 
-    .hljs-atrule-id,
-    .hljs-selector,
-    .hljs-tag-id {
+    .atrule-id,
+    .selector,
+    .tag-id {
       color: #f0fff0;
     }
 
-    .hljs-attr-name {
+    .attr-name {
       color: #b3d6b3;
     }
 
-    .hljs-function > .hljs-keyword {
+    .function > .keyword {
       color: #78ddfa;
       font-weight: 700;
     }
 
-    .hljs-function > .hljs-title {
+    .function > .title {
       color: #d08888;
     }
 
-    .hljs-params {
-      color: #fbb579;
+    .params {
+      color: #fbe979;
     }
 
-    .hljs-keyword {
+    .keyword {
       color: #a4a0ff;
     }
 
-    .hljs-string {
+    .string {
       font-weight: 400;
       font-family: 'Hack';
       color: #a0e4cf;
     }
 
-    .hljs-attr {
+    .attr {
       color: #a39fff;
     }
 
