--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -5,82 +5,82 @@
     background: #1e3742;
     color: #daf7fd;
 
-    .hljs-attr {
+    .attr {
       color: #7ac9ff !important;
       font-weight: 700;
     }
 
-    .hljs-string {
+    .string {
       font-weight: 400;
       font-family: 'Hack';
       color: #a0e4cf;
     }
 
-    .hljs-comment,
-    .hljs-quote {
+    .comment,
+    .quote {
       color: #5c6370;
       font-style: italic;
     }
 
-    .hljs-doctag,
-    .hljs-formula,
-    .hljs-keyword {
+    .doctag,
+    .formula,
+    .keyword {
       color: #c678dd;
     }
 
-    .hljs-deletion,
-    .hljs-name,
-    .hljs-section,
-    .hljs-selector-tag,
-    .hljs-subst {
+    .deletion,
+    .name,
+    .section,
+    .selector-tag,
+    .subst {
       color: #e06c75;
     }
 
-    .hljs-literal {
+    .literal {
       color: #56b6c2;
     }
 
-    .hljs-addition,
-    .hljs-attribute,
-    .hljs-regexp {
+    .addition,
+    .attribute,
+    .regexp {
       color: #c39dea !important;
     }
 
-    .hljs-built_in,
-    .hljs-class,
-    .hljs-title {
+    .built_in,
+    .class,
+    .title {
       color: #e6c07b;
     }
 
-    .hljs-attr,
-    .hljs-number,
-    .hljs-selector-attr,
-    .hljs-selector-class,
-    .hljs-selector-pseudo,
-    .hljs-template-variable,
-    .hljs-type,
-    .hljs-variable {
+    .attr,
+    .number,
+    .selector-attr,
+    .selector-class,
+    .selector-pseudo,
+    .template-variable,
+    .type,
+    .variable {
       color: #c79fd2;
     }
 
-    .hljs-bullet,
-    .hljs-link,
-    .hljs-meta,
-    .hljs-selector-id,
-    .hljs-symbol,
-    .hljs-title {
+    .bullet,
+    .link,
+    .meta,
+    .selector-id,
+    .symbol,
+    .title {
       color: #61aeee;
     }
 
-    .hljs-emphasis {
+    .emphasis {
       font-style: italic;
     }
 
-    .hljs-strong {
+    .strong {
       font-weight: bold;
     }
 
-    .hljs-link {
+    .link {
       text-decoration: underline;
     }
 
