--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,67 +1,65 @@
 .post-content {
-  .language-python,
-  .python {
-    color: #e4f8fd;
-    background: #1c2d47 !important;
+  .hljs {
 
-    &::before {
-      height: auto;
-      content: "Python" !important;
-      background: rgba(61, 74, 101, 0.6);
-    }
+    &.language-python,
+    &.python {
+      color: #e4f8fd !important;
+      background: #1c2d47 !important;
 
-    .hljs-meta {
-      color: #c7a85d;
-    }
-
-    .hljs-addition,
-    .hljs-meta-string,
-    .hljs-regexp,
-    .hljs-string {
-      color: #93DCB8;
-      font-weight: 100;
-      font-family: 'Hack';
-    }
-
-    .hljs-params {
-      color: #ecb357 !important;
-    }
-
-    .hljs-comment {
-      color: #737a8e !important;
-    }
-
-    .hljs-attribute {
-      color: #d8b061 !important;
-    }
-
-    .hljs-class,
-    .hljs-title {
-      color: #ffd712 !important;
-      font-weight: 700;
-      font-family: 'Hack';
-    }
-
-    .hljs-attr,
-    .hljs-number,
-    .hljs-selector-attr,
-    .hljs-selector-pseudo,
-    .hljs-template-variable,
-    .hljs-type,
-    .hljs-variable {
-      color: #bc82d8 !important;
-    }
-
-    .hljs-keyword {
-      color: #00b1d5 !important;
-      font-weight: 700;
-      font-family: 'Hack';
-    }
-
-    .hljs-function {
-      .hljs-keyword {
-        color: #00b1d5 !important;
+      &::before {
+        height: auto;
+        content: "Python" !important;
+        background: rgba(61, 74, 101, 0.6) !important;
+        color: white !important;
       }
-    }
+
+      .meta {
+        color: #ffe090 !important;
+      }
+
+      .addition,
+      .meta-string,
+      .regexp,
+      .string {
+        color: #93DCB8 !important;
+        font-weight: 100;
+        font-family: 'Hack';
+      }
+
+      .params {
+        color: #ecb357 !important;
+      }
+
+      .comment {
+        color: #737a8e !important;
+      }
+
+      .attribute {
+        color: #d8b061 !important;
+      }
+
+      .class,
+      .title {
+        color: #ffd712 !important;
+        font-weight: 700;
+        font-family: 'Hack';
+      }
+
+      .attr,
+      .number,
+      .selector-attr,
+      .selector-pseudo,
+      .template-variable,
+      .type,
+      .variable {
+        color: #bc82d8 !important;
+      }
+
+      .keyword {
+        color: #00b1d5 !important;
+        font-weight: 700;
+        font-family: 'Hack';
+      }
+      }
   }
 }
