--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -14,73 +14,73 @@
     color: #c5cddc;
     background: #282c34;
 
-    .hljs-comment,
-    .hljs-quote {
+    .comment,
+    .quote {
       color: #5c6370;
       font-style: italic;
     }
 
-    .hljs-doctag,
-    .hljs-formula,
-    .hljs-keyword {
+    .doctag,
+    .formula,
+    .keyword {
       color: #c678dd;
     }
 
 
-    .hljs-deletion,
-    .hljs-name,
-    .hljs-section,
-    .hljs-selector-tag,
-    .hljs-subst {
+    .deletion,
+    .name,
+    .section,
+    .selector-tag,
+    .subst {
       color: #ed77f3;
     }
 
-    .hljs-literal {
+    .literal {
       color: #56b6c2;
     }
 
-    .hljs-addition,
-    .hljs-attribute,
-    .hljs-meta-string,
-    .hljs-regexp,
-    .hljs-string {
+    .addition,
+    .attribute,
+    .meta-string,
+    .regexp,
+    .string {
       color: #7bd4ff;
     }
 
-    .hljs-built_in,
-    .hljs-class .hljs-title {
+    .built_in,
+    .class .title {
       color: #e6c07b;
     }
 
-    .hljs-attr,
-    .hljs-number,
-    .hljs-selector-attr,
-    .hljs-selector-class,
-    .hljs-selector-pseudo,
-    .hljs-template-variable,
-    .hljs-type,
-    .hljs-variable {
+    .attr,
+    .number,
+    .selector-attr,
+    .selector-class,
+    .selector-pseudo,
+    .template-variable,
+    .type,
+    .variable {
       color: #f2c77f;
     }
 
-    .hljs-bullet,
-    .hljs-link,
-    .hljs-meta,
-    .hljs-selector-id,
-    .hljs-symbol,
-    .hljs-title {
+    .bullet,
+    .link,
+    .meta,
+    .selector-id,
+    .symbol,
+    .title {
       color: #61aeee;
     }
 
-    .hljs-emphasis {
+    .emphasis {
       font-style: italic;
     }
 
-    .hljs-strong {
+    .strong {
       font-weight: bold;
     }
 
-    .hljs-link {
+    .link {
       text-decoration: underline;
     }
   }
@@ -88,7 +88,7 @@
 
 .handlebars,
 .language-handlebars{
-  .hljs-template-variable{
+  .template-variable{
     color: #88c8fb;
   }
 
