--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -33,7 +33,7 @@ nav {
 			margin: 5px auto 30px;
 		}
 
-		a {
+		.post-content a {
 			color: darken(@theme-color, 10%);
 			font-family: 'soleil', sans-serif;
 		}
@@ -171,8 +171,6 @@ nav {
 		}
 		@media(max-width: 600px) {
 			font-size: 1.65em;
-			margin-left: calc(~"-50vw + 50%");
-			margin-right: calc(~"-50vw + 50%");
 			width: auto;
 			line-height: 1.3;
 			text-align: center;
@@ -770,7 +768,7 @@ article {
 		}
 	}
 
-	a {
+	.post-content a {
 		color: darken(@theme-color, 10%);
 		font-weight: 400;
 
