--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -26,7 +26,7 @@
 
 		a {
 			background: #e7eefa;
-			color: #5b6a80;
+			color: #5b6a80 !important;
 			font-size: 0.8em;
 			margin-right: 15px;
 			line-height: 1;
@@ -57,6 +57,14 @@
 
 	.share {
 		margin: 15px 0 10px !important;
+
+		@media(max-width: 900px) {
+			margin: 15px 0 40px !important;
+		}
+
+		@media(max-width: 600px) {
+			margin: 15px 0 !important;
+		}
 
 		.share-icons {
 			display: flex;
@@ -325,6 +333,7 @@ section .widget.newsletter {
 
 .after-post {
 	max-width: 830px !important;
+	margin-top: 20px;
 
 	@media(max-width: 900px) {
 		width: 95%;
