--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -6,6 +6,7 @@
 nav {
   margin-bottom: 40px;
   box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
+
   @media(max-width: 600px) {
     margin-bottom: 0;
   }
@@ -1157,13 +1158,14 @@ nav {
 
       a {
         display: block;
-        font-weight: 300;
         font-size: .8em;
         padding: 10px;
         text-align: left;
         line-height: 1.5;
         color: @text-color;
         transition: all .3s ease-out;
+        font-family: 'soleil', sans-serif;
+        font-weight: 100;
 
         &:hover {
           background: #0db0e2;
