--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -6,22 +6,20 @@
 		main post area
 	====================================================*/
 
-nav {
-	margin-bottom: 1px;
-}
+	nav {
+		margin-bottom: 1px;
+	}
 
 	.post-footer {
 		width: 100%;
 		max-width: 100%;
+
 		@media(max-width: 800px) {
 			width: 100% !important;
 		}
 	}
 
 	.post-wrapper {
-		margin: 0 auto 30px;
-    	width: 100%;
-    	max-width: 790px;
 
 		@media(max-width: 800px) {
 			width: 90%;
@@ -91,6 +89,7 @@ nav {
 		.featured-media {
 			line-height: 1;
 			margin: 20px 0 0;
+
 			@media(max-width: 800px) {
 				margin: 20px 0 0;
 			}
@@ -117,6 +116,7 @@ nav {
 		letter-spacing: 0;
 		line-height: 1.1;
 		color: @h1-color;
+
 		@media(max-width: 800px) {
 			margin: 10px 0 10px;
 			font-size: 2em;
@@ -149,6 +149,7 @@ nav {
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'ProductSans-Regular', sans-serif;
+
 		@media(max-width: 800px) {
 			margin: 10px 0 0;
 		}
@@ -158,14 +159,14 @@ nav {
 	}
 
 	h2 {
-	  margin: 40px 0 20px;
-    color: #555560;
+	  	margin: 40px 0 20px;
+    	color: #555560;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular', sans-serif;
 		font-weight: 100!important;
 		font-size: 2em;
-		width: fit-content;
 		width: 100%;
+
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 		}
@@ -186,6 +187,7 @@ nav {
 		color: #555560;
 		margin: 40px 0 20px;
 		font-family: 'ProductSans-Regular', sans-serif;
+
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -231,15 +233,6 @@ nav {
 	}
 }
 
-[data-simplebar] {
-	@media (max-width: 600px) {
-		margin-left: calc(~"-50vw + 50%") !important;
-		margin-right: calc(~"-50vw + 50%") !important;
-		width: 120%;
-		overflow: visible;
-	}
-}
-
 .container {
 	margin: 0 auto;
 	padding: 0;
@@ -249,6 +242,80 @@ article {
 	width: 100% !important;
 	padding: 0 !important;
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
+	background: @white;
+	margin-bottom: 0;
+	position: relative;
+	overflow: hidden;
+	order: 1;
+
+	.post-content {
+		position: relative;
+
+		ol,
+		ul {
+			margin: 0 30px 20px;
+			padding-left: 0;
+
+			@media(max-width:600px) {
+				margin: 20px 15px 25px;
+				padding-left: 0;
+			}
+
+			li {
+				font-style: normal;
+				font-variant: normal;
+				text-rendering: auto;
+				margin: 0 0 10px 0;
+				padding-left: 0;
+				line-height: 1.7;
+				display: block;
+				@media(max-width: 600px) {
+					margin: 10px 0;
+				}
+
+				&::before {
+					color: darken(@theme-color, 5%);
+					display: inline-block;
+					font-style: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					-webkit-font-smoothing: antialiased;
+					padding-left: 0;
+					font-family: "Font Awesome 5 Pro";
+					content: "\f111";
+					font-size: 9px;
+					margin-right: 9px;
+					font-weight: 500;
+
+					@media(max-width: 600px) {
+						margin-left: 0;
+					}
+				}
+
+				ul {
+					margin-left: 0;
+					margin-bottom: 0;
+
+					li {
+						border-left: 1px solid rgba(77, 177, 212, 0.3);
+						padding: 0 0 20px 20px;
+						margin-left: 10px;
+						margin: 0 0 0 10px;
+
+						&:last-of-type {
+							padding-bottom: 0;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.post-wrapper {
+		margin: 0 auto 30px;
+		width: 100%;
+		max-width: 790px;
+	}
 
 	header {
 		padding: 10px 0 15px;
@@ -421,73 +488,6 @@ article {
 }
 
 .post {
-	padding: 0;
-	background: @white;
-	margin-bottom: 0;
-	position: relative;
-	overflow: hidden;
-	order: 1;
-
-	.post-wrapper {
-		position: relative;
-
-	ol,
-	ul {
-		margin: 0 30px 20px;
-		padding-left: 0;
-
-		@media(max-width:600px) {
-			margin: 20px 15px 25px;
-			padding-left: 0;
-		}
-
-		li {
-			font-style: normal;
-			font-variant: normal;
-			text-rendering: auto;
-			margin: 0 0 10px 0;
-			padding-left: 0;
-			line-height: 1.7;
-			display: block;
-			@media(max-width: 600px) {
-				margin: 10px 0;
-			}
-
-			&::before {
-				color: darken(@theme-color, 5%);
-				display: inline-block;
-				font-style: normal;
-				font-variant: normal;
-				text-rendering: auto;
-				-webkit-font-smoothing: antialiased;
-				padding-left: 0;
-				font-family: "Font Awesome 5 Pro";
-				content: "\f111";
-				font-size: 9px;
-				margin-right: 9px;
-				font-weight: 500;
-				@media(max-width: 600px) {
-					margin-left: 0;
-				}
-			}
-
-			ul {
-				margin-left: 0;
-				margin-bottom: 0;
-
-				li {
-					border-left: 1px solid rgba(77, 177, 212, 0.3);
-					padding: 0 0 20px 20px;
-					margin-left: 10px;
-					margin: 0 0 0 10px;
-
-					&:last-of-type {
-						padding-bottom: 0;
-					}
-				}
-			}
-		}
-	}
 
 	ol {
 		counter-reset: my-awesome-counter;
@@ -506,11 +506,11 @@ article {
 			}
 		}
 	}
-}
+
 	/*   Start of Protip box */
 	.protip {
 		background: rgba(255, 222, 196, 0.42);
-	  padding: 53px 20px 16px;
+	  	padding: 53px 20px 16px;
 		font-size: 0.96em;
 		overflow: hidden;
 		margin: 30px auto;
@@ -524,8 +524,7 @@ article {
 		@media(max-width: 600px) {
 			padding: 50px 20px 15px !important;
 			line-height: 1.6;
-    	font-size: 0.9em;
-			padding: 0 20px 20px;
+    		font-size: 0.9em;
 		}
 
 		a {
@@ -656,7 +655,6 @@ article {
 				color: white;
 				width: 100%;
 				padding: 5px 15px;
-				margin: 0 auto;
 				left: 0;
 			}
 
@@ -673,6 +671,7 @@ article {
 		}
 	}
 	/*     End of Blockqoute    */
+
 	/*     Start of Figcaption    */
 	figcaption {
 		width: -webkit-fill-available;
@@ -686,14 +685,15 @@ article {
 		white-space: normal;
 		line-height: 1.5;
 		border-top: 1px solid #e0e1e4;
+
 		@media(max-width: 600px) {
 			display: block;
 			width: auto !important;
 			height: auto;
 			font-size: 13px !important;
 			margin-top: 5px;
-			margin-right: calc(-50vw + 50%)!important;
-			margin-left: calc(-50vw + 50%)!important;
+			margin-right: calc(-50vw + 50%) !important;
+			margin-left: calc(-50vw + 50%) !important;
 			padding: 10px 25px !important;
 			line-height: 1.4 !important;
 		}
@@ -718,7 +718,7 @@ article {
 		}
 	}
 }
-/*  End of Blockquote */
+
 .post-template {
 	hr {
 		opacity: 0.3;
@@ -733,20 +733,6 @@ article {
 		box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 		border: 1px solid rgba(206, 206, 206, 0.42);
 
-		&:hover {
-			cursor: zoom-in;
-		}
-
-		img {
-			width: 100%;
-			@media(max-width: 600px) {
-				margin-bottom: -5px !important;
-			}
-
-			&:hover {
-				cursor: zoom-in;
-			}
-		}
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
@@ -761,9 +747,26 @@ article {
 				width: 100%;
 				border-left: 0;
 				border-right: 0;
+
 				@media(max-width: 600px) {
 					margin-bottom: -5px !important;
 				}
+			}
+		}
+
+		&:hover {
+			cursor: zoom-in;
+		}
+
+		img {
+			width: 100%;
+
+			@media(max-width: 600px) {
+				margin-bottom: -5px !important;
+			}
+
+			&:hover {
+				cursor: zoom-in;
 			}
 		}
 	}
@@ -807,5 +810,5 @@ article {
 
 #baguetteBox-overlay .full-image figcaption {
 	padding: 30px 20px;
-  font-family: 'soleil';
+	font-family: 'soleil';
 }
