--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -96,7 +96,11 @@
       float: right;
       margin-top: 20px;
 
-      &after {
+      .picker {
+        float: right;
+      }
+
+      &:after {
         content: " ";
         display: block;
         width: 0;
@@ -136,7 +140,7 @@
     width: 100%;
     display: block;
     overflow: hidden;
-    height: 715px;
+    height: 710px;
 
     @media(max-width: 800px){
       margin: 30px 0 50px;
@@ -146,7 +150,7 @@
       }
     }
 
-    .slick-dots{
+    .slick-dots {
       list-style: none;
       display: none;
       justify-content: space-between;
@@ -192,8 +196,12 @@
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
       display: inline-block;
-      height: 715px;
-      margin: 0 5px;
+      height: 695px;
+      margin: 0 2px 0 2px;
+
+      &:first-child {
+        margin-left: 0;
+      }
 
       &:last-child {
         margin-right: 0;
