--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -134,6 +134,10 @@
       border-bottom: none;
     }
 
+    .imagewrapper {
+      box-shadow: 0 0 2px #4f57a9;
+    }
+
     .featured-media {
       margin: 0;
       height: auto;
@@ -162,7 +166,7 @@
 
     .details {
       width: 100%;
-      padding: 10px 20px 0;
+      padding: 5px 20px 0;
       position: relative;
       max-height: 115px;
       @media(max-width: 800px) {
