--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -3,7 +3,7 @@
 
 .post-template {
 	/*====================================================
-		main post area
+		Main post area
 	====================================================*/
 
 	nav {
@@ -732,6 +732,8 @@ article {
 		overflow: visible;
 		box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
 		border: 1px solid rgba(206, 206, 206, 0.42);
+		border-radius: 3px;
+		overflow: hidden;
 
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
