--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -15,7 +15,6 @@
 		cursor: pointer;
 	}
 
-
 	@media(max-width: 950px) {
 		 padding: 15px;
 		 margin-bottom: 20px;
@@ -81,7 +80,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'soleil',sans-serif !important;
+			font-family: 'soleil', sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -95,7 +94,7 @@
 			}
 
 			a {
-				font-family: 'soleil',sans-serif !important;
+				font-family: 'soleil', sans-serif !important;
 				display: inline !important;
 			}
 		}
@@ -236,7 +235,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'soleil','soleil', 'sans-serif';
+			font-family: 'soleil', sans-serif;
 		}
 
 		.author-mobile {
@@ -264,7 +263,7 @@
 				}
 
 				.mobile-date {
-					font-family: 'soleil';
+					font-family: 'soleil', sans-serif;
 					font-size: 0.9em;
 				}
 			}
@@ -273,7 +272,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'soleil';
+				font-family: 'soleil', sans-serif;
 				color: @meta-color;
 			}
 			@media (max-width: 800px) {
@@ -283,7 +282,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'soleil','soleil';
+			font-family: 'soleil', sans-serif;
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -315,7 +314,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 13px;
-					font-family: 'soleil','soleil';
+					font-family: 'soleil', sans-serif;
 
 					@media(max-width: 600px) {
 						font-size: 13px;
@@ -447,9 +446,9 @@
 			height: 17px;
 			padding: 14px 24px;
 			background: @button-color;
-			box-shadow: -2px 2px 0 @button-shadow, -2px 0 0 @button-shadow, 0 2px 0 @button-shadow;
+			box-shadow: -1px 1px 0 @button-shadow, -1px 0 0 @button-shadow, 0 1px 0 @button-shadow;
 			color: white;
-			font-family: 'ProductSans-Regular',sans-serif;
+			font-family: 'ProductSans-Regular', sans-serif;
 			font-size: 18px;
 			font-weight: 600;
 			line-height: 1;
@@ -459,7 +458,7 @@
 
 			&:hover {
 				background: @hover-color;
-				box-shadow: -2px 2px 0 darken(@hover-color, 15%), -2px 0 0 darken(@hover-color, 15%), 0 2px 0 darken(@hover-color, 15%);
+				box-shadow: -1px 1px 0 darken(@hover-color, 15%), -1px 0 0 darken(@hover-color, 15%), 0 1px 0 darken(@hover-color, 15%);
 				cursor: pointer !important;
 				color: white;
 			}
@@ -468,7 +467,7 @@
 				padding: 13px 18px;
 				font-size: 14px;
 				height: fit-content;
-				font-family: 'soleil',serif;
+				font-family: 'soleil', sans-serif;
 			}
 		}
 	}
