--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -23,7 +23,7 @@
 .post-meta,
 .tag {
   .nodejs {
-    color: #69a202 !important;
+    color: #517e00 !important;
     background-color: #d9ecb6;
 
     * {
@@ -77,8 +77,8 @@
   }
 
   .frontend {
-    color: #b59316 !important;
-    background-color: lighten(#b59316, 55%);
+    color: #8c6f05 !important;
+    background-color: #fbedad;
 
     * {
       color: #b59316 !important;
