--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -50,6 +50,7 @@
   .about-content {
     & > p {
       margin: 0 44px 20px !important;
+      font-weight: 300;
 
       @media(max-width: 600px) {
         margin: 0 30px 20px !important;
