--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -1,17 +1,16 @@
 /* Global Styles */
 
-
 blockquote pre {
   width: 96% !important;
   margin: auto;
 
   p {
-    margin-bottom: 0 !important;
-  }
+     margin-bottom: 0 !important;
+   }
 
   code {
     &::before {
-      font-size: 14px !important;
+      font-size: 15px !important;
       width: 100%;
       padding: 5px 15px;
       margin: 0 auto;
@@ -31,6 +30,7 @@ blockquote pre {
     margin: 40px auto;
     border-radius: 4px;
     max-width: 100%;
+
     @media(max-width: 600px) {
       max-width: none;
       width: auto;
@@ -49,9 +49,9 @@ blockquote pre {
       overflow-x: hidden;
       font-weight: 100;
 
-      * {
-        text-shadow: -1px 1px 0 rgba(0, 0, 0, 0.25);
-      }
+      /** {
+        text-shadow: -1px 1px 0 rgba(0, 0, 0, 0.2);
+      }*/
 
       @media(max-width: 600px) {
         overflow-y: hidden;
