--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -40,9 +40,9 @@
     font-variant: normal;
     font-weight: 600;
     text-rendering: auto;
-    text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.6) !important;
+    text-shadow: -2px 2px 1px rgba(0, 9, 46, 0.5);
     content: "Code Snippet";
-    background: rgba(40, 48, 104, 0.6);
+    background: rgba(40, 48, 104, 0.4);
     letter-spacing: 1px;
     mix-blend-mode: color-dodge;
 
