--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -19,7 +19,6 @@
     .comment,
     .quote {
       color: #5c6370;
-      font-style: italic;
     }
 
     .doctag,
@@ -61,6 +60,7 @@
     .type,
     .variable {
       color: #c79fd2;
+      font-style: normal !important;
     }
 
     .bullet,
