--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,16 +1,18 @@
+
+
 .post-content {
   .hljs {
 
     &.language-python,
     &.python {
-      color: #e4f8fd !important;
-      background: #1c2d47 !important;
+      color: #e4f8fd;
+      background: #1c2a3d;
 
       &::before {
         height: auto;
         content: "Python" !important;
-        background: rgba(61, 74, 101, 0.6) !important;
-        color: white !important;
+        background: rgba(61, 74, 101, 0.4);
+        color: white;
       }
 
       .meta {
@@ -56,8 +58,8 @@
       }
 
       .keyword {
-        color: #00b1d5 !important;
-        font-weight: 700;
+        color: #45b3c9 !important;
+        font-weight: 600;
         font-family: 'Hack';
       }
       }
