--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -7,7 +7,7 @@
     width: 100%;
     display: none;
     margin: auto;
-    border: 1px solid #ecf0f9;
+    box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
     @media(max-width: 600px) {
       width: auto !important;
@@ -20,6 +20,7 @@
       max-width: 830px;
       margin: 0 auto;
       background: rgba(255, 255, 255, .6);
+      overflow: hidden;
 
       @media(max-width: 900px) {
         margin: 0;
