--- a/partials/nav/desktop-navigation.hbs
+++ b/partials/nav/desktop-navigation.hbs
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropdown">Series'</button>
+        <a href="https://hackersandslackers.com/series/"><button class="dropdown">Series'</button></a>
         <div class="dropdown-content">
             {{#get "tags" filter="feature_image:-null+slug:-[starting-django,plotly-dash]" include="count.posts,meta_title,slug" order="count.posts DESC" limit="all"}}
                 {{#foreach tags visibility="internal"}}
